# lotus-emu

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/armripper/emuviolet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  int_jni_vm.cpp  scph_9000x.h  scph_xxxx.h  spin_lock.cpp  spin_lock.h  vm_engine.cpp  vm_engine.h
app/src/main/cpp/common/: core_space.h
app/src/main/cpp/mips/: MIPS.h  chip_r3000a.h  dynamic_recompiler_aarchv8a.h  machine_interpreter.h  mips.h
app/src/main/java/com/emulotus/: ExternalStorage.kt  MainActivity.kt  RuntimeProperties.kt  UserMachine.kt
app/src/main/java/com/emulotus/emu/: VMState.kt
app/src/main/java/com/emulotus/fragments/: GalleryFragment.kt  HomeFragment.kt  SettingsFragment.kt  StatisticsFragment.kt  UserLogFragment.kt
app/src/main/java/com/emulotus/layers/: EmulationLayer.kt
app/src/main/java/com/emulotus/user/: DyLoggerFilter.kt  LoggerMessage.kt
app/src/main/java/com/emulotus/user/interface/: DynamicLogger.kt
app/src/main/res/drawable/: ic_close.xml  ic_dark.xml  ic_exit.xml  ic_folder.xml  ic_gallery.xml  ic_grid.xml  ic_home.xml  ic_list.xml  ic_log.xml  ic_radio_selector_all.xml  ic_radio_selector_dev.xml  ic_radio_selector_err.xml  ic_radio_selector_info.xml  ic_radio_selector_success.xml  ic_radio_selector_warn.xml  ic_radio_unselected.xml  ic_settings.xml  ic_statistics.xml
app/src/main/res/layout/: activity_main.xml  fragment_gallery.xml  fragment_home.xml  fragment_settings.xml  fragment_statistics.xml  fragment_userlog.xml  header_navbar.xml  main_content.xml  main_screen.xml  user_log_item.xml
app/src/main/res/menu/: bottom_menu.xml  drawer_menu.xml  top_menu.xml
app/src/main/res/navigation/: nav_drawer.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml  values.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/test/java/com/armripper/emuviolet/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
